Fri Feb 13 10:18:45 GMT 2015  Olly Betts <olly@survex.com>

	* generate-exceptions: Note that the change to not negate
	  WSAGetLastError() values internally was backported for 1.2.20.

Fri Feb 13 05:57:13 GMT 2015  Olly Betts <olly@survex.com>

	* api/,common/remoteprotocol.h,exception_data.pm,
	  include/xapian/query.h,include/xapian/queryparser.h,matcher/,
	  queryparser/queryparser.lemony,tests/api_qpbackend.cc,
	  tests/queryparsertest.cc,weight/weightinternal.cc,
	  weight/weightinternal.h: Add new OP_WILDCARD query operator, which
	  expands wildcards lazily, so now we create the PostList tree for a
	  wildcard directly, rather than creating an intermediate Query tree.
	  See ticket#48.

Wed Feb 11 22:45:26 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_table.cc: mid_point() should never fail to find
	  a split point, but just in case it does, return a usable answer.

Wed Feb 11 22:44:35 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: mid_point() should never fail to find
	  a split point, but just in case it does, return a usable answer.

Mon Feb 09 02:56:54 GMT 2015  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/localsubmatch.cc,
	  matcher/localsubmatch.h,matcher/queryoptimiser.h,tests/api_query.cc:
	  Don't convert an unweighted term which indexes all docs to an all
	  docs postlist if we need positional data for it.

Sun Jan 25 23:48:34 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Check for declaration of fdatasync() first, as OS X
	  has a dummy implementation in the library which is not prototyped in
	  any header.  Reported by Vlad Shablinsky.

Fri Jan 09 05:19:20 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Fix freelist handling to allow for
	  the newly loaded first block of the freelist being already used up.

Fri Jan 09 04:38:03 GMT 2015  Olly Betts <olly@survex.com>

	* common/debuglog.cc: Add '#include "errno_to_string.h"'.
